--- a/_config.yml
+++ b/_config.yml
@@ -7,15 +7,15 @@ permalink:        pretty
 
 
 # Setup
-title:            Hyde
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+title:            An Nguyen
+tagline:          'Home'
+description:      'A glimpse into the life of a twenty-two-year-old who is doing her Masters degree at York Uni and moving to Vancouver this October to start working at <a href="https://home.kpmg.com/ca/en/home/about/offices/vancouver-1.html" target="_blank">KPMG</a> full time.'
 url:              http://antnh6.github.io/sister
 baseurl:          /sister/
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           'An Nguyen'
+  url:            https://www.linkedin.com/in/nguyenah/
 
 paginate:         5
 
